chore(menu-toggle): updated demos to use menu-toggle

--- a/src/patternfly/components/InputGroup/input-group.scss
+++ b/src/patternfly/components/InputGroup/input-group.scss
@@ -35,6 +35,7 @@
   --#{$input-group}__item--m-disabled--BackgroundColor: var(--#{$pf-global}--disabled-color--300);
 
   display: flex;
+  align-items: flex-start;
   width: 100%;
 }
 
