--- a/src/patternfly/components/Toolbar/toolbar-item-search-filter.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-item-search-filter.hbs
@@ -1,20 +1,14 @@
 {{#> toolbar-item toolbar-item--modifier=(concat 'pf-m-search-filter ' toolbar-item-search-filter--modifier)}}
   {{#> input-group input-group--attribute=(concat 'aria-label="search filter" role="group"')}}
     {{#> input-group-item}}
-      {{#> select select--id=(concat toolbar--id '-select-name') select--width=(ternary toolbar-items-search-filter--width toolbar-items-search-filter--width '124px') select-toggle--icon="fas fa-filter"}}
-        {{#if toolbar-items-search-filter--text}}
-          {{{toolbar-items-search-filter--text}}}
-        {{else}}
-          Name
-        {{/if}}
-      {{/select}}
+      {{> menu-toggle
+          menu-toggle--id=(concat toolbar--id '-search-filter-menu')
+          menu-toggle--text=(ternary toolbar-items-search-filter--text toolbar-items-search-filter--text 'Name')
+          menu-toggle--icon='filter'
+        }}
     {{/input-group-item}}
     {{#> input-group-item input-group-item--IsFill=true}}
-      {{#if toolbar-items-search-filter--text}}
-        {{> text-input-group--search-input text-input-group--id="text-input-group-search-input-group" text-input-group-text-input--placeholder=(concat "Filter by " toolbar-items-search-filter--text)}}
-      {{else}}
-        {{> text-input-group--search-input text-input-group--id="text-input-group-search-input-group" text-input-group-text-input--placeholder="Filter by name"}}
-      {{/if}}
+      {{> text-input-group--search-input text-input-group--id=(concat toolbar--id '-text-input-group-search-input-group') text-input-group-text-input--placeholder=(ternary toolbar-items-search-filter--text toolbar-items-search-filter--text 'Filter by name')}}
     {{/input-group-item}}
   {{/input-group}}
 {{/toolbar-item}}
