--- a/src/patternfly/components/Toolbar/toolbar-item.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-item.hbs
@@ -11,6 +11,9 @@
   {{#if toolbar-item--id}}
     id="{{toolbar-item--id}}"
   {{/if}}
+  {{#if toolbar-item--IsRelative}}
+    style="position: relative;"
+  {{/if}}
   {{#if toolbar-item--attribute}}
     {{{toolbar-item--attribute}}}
   {{/if}}>
