fix(role): update roles to match React (#5753)

--- a/src/patternfly/components/Dropdown/dropdown-menu.hbs
+++ b/src/patternfly/components/Dropdown/dropdown-menu.hbs
@@ -7,6 +7,9 @@
   {{#unless dropdown--IsExpanded}}
     hidden
   {{/unless}}
+  {{#unless dropdown--HasCustomContent}}
+    role="menu"
+  {{/unless}}
   {{#if dropdown-menu--attribute}}
     {{{dropdown-menu--attribute}}}
   {{/if}}>
