--- a/src/patternfly/components/AppLauncher/app-launcher-menu-item.hbs
+++ b/src/patternfly/components/AppLauncher/app-launcher-menu-item.hbs
@@ -1,4 +1,7 @@
 <{{# if app-launcher-menu-item--type}}{{app-launcher-menu-item--type}}{{else}}a{{/if}} class="{{pfv}}app-launcher__menu-item{{#if app-launcher-menu-item--modifier}} {{app-launcher-menu-item--modifier}}{{/if}}"
+  {{#unless app-launcher-menu-item--IsFavorite}}
+    role="menuitem"
+  {{/unless}}
   {{#if app-launcher-menu-item--type}}
     type="button"
   {{/if}}
