--- a/src/patternfly/components/OverflowMenu/overflow-menu-dropdown-item.hbs
+++ b/src/patternfly/components/OverflowMenu/overflow-menu-dropdown-item.hbs
@@ -1,8 +1,9 @@
 <li{{#if overflow-menu-dropdown-item--modifier}} class="{{overflow-menu-dropdown-item--modifier}}"{{/if}}
+  role="none"
   {{#if overflow-menu-dropdown-item--attribute}}
     {{{overflow-menu-dropdown-item--attribute}}}
   {{/if}}>
-  <{{#if overflow-menu-dropdown-item--IsAnchorLink}}a{{else}}button{{/if}} class="{{pfv}}dropdown__menu-item{{#if overflow-menu-dropdown-item--modifier}} {{overflow-menu-dropdown-items--modifier}}{{/if}}">
+  <{{#if overflow-menu-dropdown-item--IsAnchorLink}}a{{else}}button{{/if}} role="menuitem" class="{{pfv}}dropdown__menu-item{{#if overflow-menu-dropdown-item--modifier}} {{overflow-menu-dropdown-items--modifier}}{{/if}}">
     {{> @partial-block}}
   </{{#if overflow-menu-dropdown-item--IsAnchorLink}}a{{else}}button{{/if}}>
 </li>
