chore(select): fixed text in HTML example to show multiple checks can be selected (#5663)

--- a/src/patternfly/components/Select/__select-menu-descriptive.hbs
+++ b/src/patternfly/components/Select/__select-menu-descriptive.hbs
@@ -16,11 +16,6 @@
       {{/select-menu-item}}
     </li>
     <li role="presentation">
-      {{#> select-menu-item select-menu-item--IsSelected="true"}}
-        Menu item selected
-      {{/select-menu-item}}
-    </li>
-    <li role="presentation">
       {{#> select-menu-item select-menu-item--Description="This is a description."}}
         Menu item description
       {{/select-menu-item}}
@@ -38,7 +33,7 @@
       {{/select-menu-item}}
     </li>
     <li role="presentation">
-      {{#> select-menu-item select-menu-item--Description="This is a really long description that describes the menu item. This is a really long description that describes the menu item." select-menu-item--IsSelected="true"}}
+      {{#> select-menu-item select-menu-item--Description="This is a really long description that describes the menu item. This is a really long description that describes the menu item."}}
         Menu item long description
       {{/select-menu-item}}
     </li>
