chore(options-menu): updated markup to match react component

--- a/src/patternfly/components/OptionsMenu/options-menu-group.hbs
+++ b/src/patternfly/components/OptionsMenu/options-menu-group.hbs
@@ -1,4 +1,5 @@
 <section class="{{pfv}}options-menu__group{{#if options-menu-group--modifier}} {{options-menu-group--modifier}}{{/if}}"
+  role="none"
   {{#if options-menu-group--attribute}}
     {{{options-menu-group--attribute}}}
   {{/if}}>
