--- a/src/patternfly/components/OptionsMenu/options-menu-multiple.hbs
+++ b/src/patternfly/components/OptionsMenu/options-menu-multiple.hbs
@@ -1,29 +1,32 @@
-{{#> options-menu-menu}}
-<li>
-  <ul aria-label="Sort by">
-    {{#> options-menu-menu-item}}
-      Name
-    {{/options-menu-menu-item}}
-    {{#> options-menu-menu-item options-menu-menu-item--IsSelected="true"}}
-      Date
-    {{/options-menu-menu-item}}
-    {{#> options-menu-menu-item options-menu-menu-item--attribute="disabled"}}
-      Disabled
-    {{/options-menu-menu-item}}
-    {{#> options-menu-menu-item}}
-      Size
-    {{/options-menu-menu-item}}
-  </ul>
-</li>
-{{> divider divider--type="li"}}
-<li>
-  <ul aria-label="Sort direction">
-    {{#> options-menu-menu-item options-menu-menu-item--IsSelected="true"}}
-      Ascending
-    {{/options-menu-menu-item}}
-    {{#> options-menu-menu-item}}
-      Descending
-    {{/options-menu-menu-item}}
-  </ul>
-</li>
+{{#> options-menu-menu options-menu-menu--type="div"}}
+  {{#> options-menu-group}}
+    <ul aria-label="Sort by">
+      {{#> options-menu-menu-item}}
+        Option 1
+      {{/options-menu-menu-item}}
+      {{#> options-menu-menu-item}}
+        Name
+      {{/options-menu-menu-item}}
+      {{#> options-menu-menu-item options-menu-menu-item--IsSelected="true"}}
+        Date
+      {{/options-menu-menu-item}}
+      {{#> options-menu-menu-item options-menu-menu-item--attribute="disabled"}}
+        Disabled
+      {{/options-menu-menu-item}}
+      {{#> options-menu-menu-item}}
+        Size
+      {{/options-menu-menu-item}}
+    </ul>
+  {{/ options-menu-group}}
+  {{> divider divider--type="li"}}
+  {{#> options-menu-group}}
+    <ul aria-label="Sort direction">
+      {{#> options-menu-menu-item options-menu-menu-item--IsSelected="true"}}
+        Ascending
+      {{/options-menu-menu-item}}
+      {{#> options-menu-menu-item}}
+        Descending
+      {{/options-menu-menu-item}}
+    </ul>
+  {{/ options-menu-group}}
 {{/options-menu-menu}}
