--- a/src/patternfly/components/OptionsMenu/options-menu-groups.hbs
+++ b/src/patternfly/components/OptionsMenu/options-menu-groups.hbs
@@ -1,6 +1,6 @@
 {{#> options-menu-menu options-menu-menu--type="div"}}
   {{#> options-menu-group}}
-    <ul>
+    {{#> options-menu-list}}
       {{#> options-menu-menu-item}}
         Option 1
       {{/options-menu-menu-item}}
@@ -10,14 +10,14 @@
       {{#if options-menu--HasDividersItems}}
         {{> divider divider--type="li"}}
       {{/if}}
-    </ul>
+    {{/options-menu-list}}
   {{/options-menu-group}}
   {{#if options-menu--HasGroupDividers}}
     {{> divider}}
   {{/if}}
   {{#> options-menu-group}}
     {{#> options-menu-group-title}}Group 1{{/options-menu-group-title}}
-    <ul>
+    {{#> options-menu-list}}
       {{#> options-menu-menu-item}}
         Option 1
       {{/options-menu-menu-item}}
@@ -27,20 +27,20 @@
       {{#if options-menu--HasDividersItems}}
         {{> divider divider--type="li"}}
       {{/if}}
-    </ul>
+    {{/options-menu-list}}
   {{/options-menu-group}}
   {{#if options-menu--HasGroupDividers}}
     {{> divider}}
   {{/if}}
   {{#> options-menu-group}}
     {{#> options-menu-group-title}}Group 2{{/options-menu-group-title}}
-    <ul>
+    {{#> options-menu-list}}
       {{#> options-menu-menu-item}}
         Option 1
       {{/options-menu-menu-item}}
       {{#> options-menu-menu-item}}
         Option 2
       {{/options-menu-menu-item}}
-    </ul>
+    {{/options-menu-list}}
   {{/options-menu-group}}
 {{/options-menu-menu}}
