--- a/src/patternfly/components/OptionsMenu/options-menu-menu-item.hbs
+++ b/src/patternfly/components/OptionsMenu/options-menu-menu-item.hbs
@@ -1,6 +1,7 @@
 <li role="none">
-  <button role="option" class="{{pfv}}options-menu__menu-item{{#if options-menu-menu-item--modifier}} {{options-menu-menu-item--modifier}}{{/if}}"
+  <button class="{{pfv}}options-menu__menu-item{{#if options-menu-menu-item--modifier}} {{options-menu-menu-item--modifier}}{{/if}}"
     type="button"
+    role="menuitem"
     {{#if options-menu-menu-item--attribute}}
       {{{options-menu-menu-item--attribute}}}
     {{/if}}>
