--- a/src/patternfly/components/OptionsMenu/options-menu-multiple.hbs
+++ b/src/patternfly/components/OptionsMenu/options-menu-multiple.hbs
@@ -1,9 +1,6 @@
 {{#> options-menu-menu options-menu-menu--type="div"}}
   {{#> options-menu-group}}
-    <ul aria-label="Sort by">
-      {{#> options-menu-menu-item}}
-        Option 1
-      {{/options-menu-menu-item}}
+    {{#> options-menu-list options-menu-list--attribute='aria-label="Sort by"'}}
       {{#> options-menu-menu-item}}
         Name
       {{/options-menu-menu-item}}
@@ -16,17 +13,17 @@
       {{#> options-menu-menu-item}}
         Size
       {{/options-menu-menu-item}}
-    </ul>
-  {{/ options-menu-group}}
+    {{/options-menu-list}}
+  {{/options-menu-group}}
   {{> divider divider--type="li"}}
   {{#> options-menu-group}}
-    <ul aria-label="Sort direction">
+    {{#> options-menu-list options-menu-list--attribute='aria-label="Sort direction"'}}
       {{#> options-menu-menu-item options-menu-menu-item--IsSelected="true"}}
         Ascending
       {{/options-menu-menu-item}}
       {{#> options-menu-menu-item}}
         Descending
       {{/options-menu-menu-item}}
-    </ul>
-  {{/ options-menu-group}}
+    {{/options-menu-list}}
+  {{/options-menu-group}}
 {{/options-menu-menu}}
