chore(menu-toggle): resolved a11y issues

--- a/src/patternfly/components/Menu/menu.hbs
+++ b/src/patternfly/components/Menu/menu.hbs
@@ -2,6 +2,9 @@
   {{#if menu--attribute}}
     {{{menu--attribute}}}
   {{/if}}
+  {{#if menu--width}}
+    width="{{menu--width}}"
+  {{/if}}
   {{#if menu--IsHidden}}
     hidden
   {{/if}}>
