--- a/src/patternfly/components/Toolbar/toolbar-toggle.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-toggle.hbs
@@ -2,7 +2,7 @@
   {{#if toolbar-toggle--attribute}}
     {{{toolbar-toggle--attribute}}}
   {{/if}}>
-  {{#> menu-toggle menu-toggle--IsPlain=true menu-toggle--IsExpanded=toolbar-toggle--IsExpanded menu-toggle--attribute=(concat 'aria-label="Show filters" aria-expanded="' toolbar-toggle--IsExpanded '" aria-controls="' toolbar--id '-expandable-content"')}}
+  {{#> menu-toggle menu-toggle--IsPlain=true menu-toggle--IsExpanded=toolbar-toggle--IsExpanded menu-toggle--attribute=(concat 'aria-label="Show filters" aria-controls="' toolbar--id '-expandable-content"')}}
     {{#if toolbar-toggle--icon}}
       <i class="fas {{toolbar-toggle--icon}}" aria-hidden="true"></i>
     {{else}}
