--- a/src/patternfly/components/Menu/menu-item-action.hbs
+++ b/src/patternfly/components/Menu/menu-item-action.hbs
@@ -1,5 +1,6 @@
 <button class="{{pfv}}menu__item-action{{#if menu-item-action--IsFavorite}} pf-m-favorite{{/if}}{{#if menu-item-action--IsFavorited}} pf-m-favorited{{/if}}{{#if menu-list-item--IsAriaDisabled}} pf-m-aria-disabled{{/if}}{{#if menu-item-action--modifier}} {{menu-item-action--modifier}}{{/if}}"
   type="button"
+  role="menuitem"
   {{#if menu-list-item--IsDisabled}}
     disabled
   {{else if menu-list-item--IsAriaDisabled}}
