--- a/src/patternfly/components/MenuToggle/menu-toggle.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle.hbs
@@ -1,4 +1,4 @@
-<{{#if menu-toggle--IsDiv}}div{{else}}button{{/if}} class="{{pfv}}menu-toggle
+<{{#ifAny menu-toggle--IsDiv menu-toggle--IsSplitButton}}div{{else}}button{{/ifAny}} class="{{pfv}}menu-toggle
   {{#if menu-toggle--IsPrimary}}
     pf-m-primary
   {{/if}}
@@ -27,7 +27,7 @@
     {{/if}}
   {{/if}}
   {{#if menu-toggle--modifier}} {{menu-toggle--modifier}}{{/if}}"
-  {{#unless menu-toggle--IsDiv}}
+  {{#unless (concat menu-toggle--IsDiv menu-toggle--IsSplitButton)}}
     type="button"
     {{#if menu-toggle--IsExpanded}}
       aria-expanded="true"
@@ -70,4 +70,4 @@
       {{> menu-toggle-toggle-icon}}
     {{/menu-toggle-controls}}
   {{/ifAny}}
-</{{#if menu-toggle--IsDiv}}div{{else}}button{{/if}}>
+</{{#ifAny menu-toggle--IsDiv menu-toggle--IsSplitButton}}div{{else}}button{{/ifAny}}>
