--- a/src/patternfly/components/Toolbar/toolbar-item-bulk-select.hbs
+++ b/src/patternfly/components/Toolbar/toolbar-item-bulk-select.hbs
@@ -1,7 +1,13 @@
 {{#> toolbar-item toolbar-item--modifier="pf-m-bulk-select"}}
-  {{> menu-toggle
-      menu-toggle--IsDiv=true
-      menu-toggle--IsSplitButton=true menu-toggle--IsCheck=true
-      menu-toggle--id=(concat toolbar--id '-bulk-select')
+  {{#> menu-toggle
+      menu-toggle--IsCheck=true
+      menu-toggle--IsSplitButton=true
+      menu-toggle--id=(concat toolbar--id '-check')
     }}
+    {{#> menu-toggle-button menu-toggle--id=(concat toolbar--id '-menu-toggle') menu-toggle-button--IsToggle=true}}
+      {{#> menu-toggle-controls}}
+        {{> menu-toggle-toggle-icon}}
+      {{/menu-toggle-controls}}
+    {{/menu-toggle-button}}
+  {{/menu-toggle}}
 {{/toolbar-item}}
