--- a/src/patternfly/utilities/Float/float.scss
+++ b/src/patternfly/utilities/Float/float.scss
@@ -1,8 +1,8 @@
 // stylelint-disable
 
 $pf-v5-u-alignment-options: (
-  float-left: (float inline-start),
-  float-right: (float inline-end)
+  float-left: (float left),
+  float-right: (float right)
 );
 
 // Text utilities
