feat(global): apply global tokens

--- a/src/patternfly/base/_variables.scss
+++ b/src/patternfly/base/_variables.scss
@@ -293,4 +293,5 @@
 
 @import "./tokens/tokens-palette";
 @import "./tokens/tokens-default";
+@import "./tokens/tokens-font";
 @import "./tokens/tokens-dark";
